mobile main menu spacing fix attempt 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -331,7 +331,8 @@ footer a:hover {
   }
 
   main h1  {
-    margin: 0 0 0 2%;
+    margin-right: 2%;
+    margin-bottom: 0;
     padding: 0;
     font-size: 10vw;
   }
@@ -420,9 +421,9 @@ footer a:hover {
       padding: 0.25em;
     }
 
-  .fa-brands {
+  /* .fa-brands {
       font-size: 0.5em;
-    }
+    } */
 
   .navButton {
     display: block;
